--- a/CameraML/app/src/main/res/values/strings.xml
+++ b/CameraML/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="nav_header_title">Camera ML</string>
     <string name="nav_header_subtitle">arnabchanda964@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Exit</string>
 </resources>
